[gd_scene load_steps=12 format=3 uid="uid://c54u10j4uta2g"]

[ext_resource type="Script" path="res://scenes/options_menu.gd" id="1_nv0aq"]
[ext_resource type="PackedScene" uid="uid://b4qeart3r6nq3" path="res://scenes/audio_slider.tscn" id="2_ylc4o"]
[ext_resource type="PackedScene" uid="uid://drotrjrpvki1v" path="res://scenes/action_button.tscn" id="3_imcny"]

[sub_resource type="SystemFont" id="SystemFont_ifngv"]
font_names = PackedStringArray("VCR OSD Mono")
subpixel_positioning = 0

[sub_resource type="SystemFont" id="SystemFont_kkua6"]
font_names = PackedStringArray("VCR OSD Mono")
subpixel_positioning = 0

[sub_resource type="SystemFont" id="SystemFont_xla55"]
font_names = PackedStringArray("VCR OSD Mono")
subpixel_positioning = 0

[sub_resource type="SystemFont" id="SystemFont_1ttuw"]
font_names = PackedStringArray("VCR OSD Mono")
subpixel_positioning = 0

[sub_resource type="SystemFont" id="SystemFont_vwiu2"]
font_names = PackedStringArray("VCR OSD Mono")
subpixel_positioning = 0

[sub_resource type="SystemFont" id="SystemFont_x048y"]
font_names = PackedStringArray("VCR OSD Mono")
subpixel_positioning = 0

[sub_resource type="SystemFont" id="SystemFont_umx0i"]
font_names = PackedStringArray("VCR OSD Mono")
subpixel_positioning = 0

[sub_resource type="SystemFont" id="SystemFont_4vkic"]
font_names = PackedStringArray("VCR OSD Mono")

[node name="Options_Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nv0aq")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = -10.0
offset_right = 1.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.503
anchor_top = 0.008
anchor_right = 0.503
anchor_bottom = 0.193
offset_left = -103.08
offset_top = -0.88
offset_right = 309.92
offset_bottom = 65.52
grow_horizontal = 2
scale = Vector2(0.5, 0.5)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 32
theme_override_fonts/font = SubResource("SystemFont_ifngv")
theme_override_font_sizes/font_size = 100
text = "Options"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Exit_Button" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -41.0
offset_top = -64.0
offset_right = 131.0
offset_bottom = 38.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.5, 0.5)
theme_override_colors/font_color = Color(0.976469, 0.976469, 0.976469, 1)
theme_override_colors/font_outline_color = Color(2.70735e-08, 0.15472, 0.0188985, 1)
theme_override_constants/outline_size = 24
theme_override_fonts/font = SubResource("SystemFont_kkua6")
theme_override_font_sizes/font_size = 70
text = "Exit"

[node name="SettingsGridContainer" type="TabContainer" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.198
anchor_top = 0.2
anchor_right = 0.795
anchor_bottom = 0.797
offset_left = -56.28
offset_right = 57.8
offset_bottom = 0.0799866
theme_override_fonts/font = SubResource("SystemFont_xla55")
clip_tabs = false
tabs_rearrange_group = 0

[node name="Graphics" type="TabBar" parent="Panel/SettingsGridContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/SettingsGridContainer/Graphics"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.046
anchor_top = 0.163
anchor_right = 0.55
anchor_bottom = 0.163
offset_left = -4.134
offset_top = -17.296
offset_right = 196.05
offset_bottom = 62.704
scale = Vector2(0.5, 0.5)
theme_override_fonts/font = SubResource("SystemFont_1ttuw")
theme_override_font_sizes/font_size = 55
text = "Window mode"

[node name="Window_Mode" type="OptionButton" parent="Panel/SettingsGridContainer/Graphics"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.593
anchor_top = 0.147
anchor_right = 0.914
anchor_bottom = 0.212
offset_left = -0.0970154
offset_top = -10.048
offset_right = 128.294
offset_bottom = 21.992
scale = Vector2(0.5, 0.5)
theme_override_fonts/font = SubResource("SystemFont_vwiu2")
theme_override_font_sizes/font_size = 30
fit_to_longest_item = false

[node name="Label2" type="Label" parent="Panel/SettingsGridContainer/Graphics"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.046
anchor_top = 0.397
anchor_right = 0.438
anchor_bottom = 0.397
offset_left = -4.134
offset_top = -15.224
offset_right = 186.898
offset_bottom = 64.776
scale = Vector2(0.5, 0.5)
theme_override_fonts/font = SubResource("SystemFont_1ttuw")
theme_override_font_sizes/font_size = 55
text = "Resolution"

[node name="Resolution" type="OptionButton" parent="Panel/SettingsGridContainer/Graphics"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.593
anchor_top = 0.413
anchor_right = 0.911
anchor_bottom = 0.473
offset_left = -0.0970154
offset_top = -10.992
offset_right = 129.281
offset_bottom = 21.968
scale = Vector2(0.5, 0.5)
theme_override_fonts/font = SubResource("SystemFont_x048y")
theme_override_font_sizes/font_size = 35
fit_to_longest_item = false

[node name="Sound" type="TabBar" parent="Panel/SettingsGridContainer"]
visible = false
custom_minimum_size = Vector2(326, 184)
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_umx0i")

[node name="Audio_Slider" parent="Panel/SettingsGridContainer/Sound" instance=ExtResource("2_ylc4o")]
layout_mode = 1
anchors_preset = -1
anchor_bottom = 0.2
offset_bottom = 214.2
bus_name = "Master"

[node name="Audio_Slider2" parent="Panel/SettingsGridContainer/Sound" instance=ExtResource("2_ylc4o")]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.266
anchor_bottom = 0.266
offset_top = 0.0559998
offset_bottom = 251.056

[node name="Audio_Slider3" parent="Panel/SettingsGridContainer/Sound" instance=ExtResource("2_ylc4o")]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.538
anchor_bottom = 0.538
offset_top = 0.00798798
offset_bottom = 251.008
bus_name = "Sfx"

[node name="Keybinds" type="TabBar" parent="Panel/SettingsGridContainer"]
visible = false
custom_minimum_size = Vector2(326, 184)
layout_mode = 2
theme_override_constants/h_separation = 20

[node name="ActionButton" parent="Panel/SettingsGridContainer/Keybinds" instance=ExtResource("3_imcny")]
layout_mode = 1
anchor_left = 0.5
anchor_top = 0.136
anchor_right = 0.693
anchor_bottom = 0.223
offset_top = -0.0240021
offset_right = 0.0820007
offset_bottom = -0.0320015

[node name="ActionButton2" parent="Panel/SettingsGridContainer/Keybinds" instance=ExtResource("3_imcny")]
layout_mode = 1
anchor_left = 0.5
anchor_top = 0.321
anchor_right = 0.693
anchor_bottom = 0.408
offset_top = -0.064003
offset_right = 0.0820007
offset_bottom = -0.0720062
action = "ui_down"

[node name="ActionButton3" parent="Panel/SettingsGridContainer/Keybinds" instance=ExtResource("3_imcny")]
layout_mode = 1
anchor_left = 0.5
anchor_top = 0.511
anchor_right = 0.693
anchor_bottom = 0.598
offset_top = -0.0240097
offset_right = 0.0820007
offset_bottom = -0.0320129
action = "ui_left"

[node name="ActionButton4" parent="Panel/SettingsGridContainer/Keybinds" instance=ExtResource("3_imcny")]
layout_mode = 1
anchor_left = 0.5
anchor_top = 0.658
anchor_right = 0.693
anchor_bottom = 0.745
offset_top = -0.0720062
offset_right = 0.0820007
offset_bottom = -0.0800171
action = "ui_right"

[node name="Label" type="Label" parent="Panel/SettingsGridContainer/Keybinds"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.055
anchor_top = 0.109
anchor_right = 0.153
anchor_bottom = 0.242
offset_left = 0.0699997
offset_top = -0.0560017
offset_right = 8.122
offset_bottom = -1.528
scale = Vector2(0.5, 0.5)
theme_override_fonts/font = SubResource("SystemFont_4vkic")
theme_override_font_sizes/font_size = 55
text = "UP"

[node name="Label2" type="Label" parent="Panel/SettingsGridContainer/Keybinds"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.055
anchor_top = 0.288
anchor_right = 0.153
anchor_bottom = 0.421
offset_left = 0.0699997
offset_top = 0.00799561
offset_right = 32.122
offset_bottom = 24.536
scale = Vector2(0.5, 0.5)
theme_override_fonts/font = SubResource("SystemFont_4vkic")
theme_override_font_sizes/font_size = 55
text = "DOWN"

[node name="Label3" type="Label" parent="Panel/SettingsGridContainer/Keybinds"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.055
anchor_top = 0.457
anchor_right = 0.15
anchor_bottom = 0.59
offset_left = -0.93
offset_top = -0.0880051
offset_right = 96.1
offset_bottom = 24.44
scale = Vector2(0.5, 0.5)
theme_override_fonts/font = SubResource("SystemFont_4vkic")
theme_override_font_sizes/font_size = 55
text = "LEFT"

[node name="Label4" type="Label" parent="Panel/SettingsGridContainer/Keybinds"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.055
anchor_top = 0.63
anchor_right = 0.175
anchor_bottom = 0.764
offset_left = -0.93
offset_top = 0.0799866
offset_right = 119.95
offset_bottom = 24.424
scale = Vector2(0.5, 0.5)
theme_override_fonts/font = SubResource("SystemFont_4vkic")
theme_override_font_sizes/font_size = 55
text = "RIGHT
"

[node name="Filtro" type="TabBar" parent="Panel/SettingsGridContainer"]
visible = false
custom_minimum_size = Vector2(326, 184)
layout_mode = 2

[connection signal="pressed" from="Panel/Exit_Button" to="." method="_on_button_pressed"]
[connection signal="item_selected" from="Panel/SettingsGridContainer/Graphics/Window_Mode" to="." method="_on_option_button_item_selected"]
[connection signal="item_selected" from="Panel/SettingsGridContainer/Graphics/Resolution" to="." method="_on_resolution_item_selected"]
